# universal-appointment-agent

./: .gitignore  README_MCP.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_env.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
src/config/: ai_config.py  business_config.py
src/config/prompts/: base_prompts.py  dentist.py
src/core/: agent.py  conversation_manager.py
src/integrations/: google_calendar.py  google_sheets.py
src/mcp/: server.py  tools_definitions.py
src/utils/: datetime_parser.py
